[package]
name = "axum_start"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.8", features = ["headers"] }
tokio = { version = "1.17.0", features = ["rt", "macros","rt-multi-thread", "parking_lot"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "8"
uuid = { version = "0.8.1", features = ["v4"] }
fake = { version = "2.4", features = ["derive"] }
rand = "0.8"
config = { version = "0.12.0" }
reqwest = { version = "0.11.9", default-features = false, features = ["json", "rustls-tls"] }


[dev-dependencies]
wiremock = "0.5.11"

[[bin]]
name = "basic"
path = "examples/post_articles.rs"